@@ -15,7 +15,6 @@ int main(void)
   const char* filedir = __TEST__ "dirfile";
   const char* format = __TEST__ "dirfile/format";
   const char* format_data = "\n";
-  unsigned char c = 0;
   int fd;
 
   mkdir(filedir, 0777);
